--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ hex = "0.4.0"
 serde_json = "1.0"
 serde = { version = "1.0.99", features = ["derive"]}
 base64 = "0.10.1"
+scoped_threadpool = "0.1.9"
