--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ serde_json = "1.0"
 serde = { version = "1.0.99", features = ["derive"]}
 base64 = "0.10.1"
 scoped_threadpool = "0.1.9"
+log = "0.4"
+env_logger = "0.6.2"
